# link_manager

./: CMakeLists.txt  README.md  client.h  common.h  main1.cpp  main2.cpp  server.h  socket_manager.h
include/: client.h  common.h  deserialize.h  link_master.h  link_rpc.h  serialize.h  server.h  socket_manager.h  tcp_transport.h  thread_pool.h
src/: link_core.cpp  link_master.cpp  manager.cpp  slaver.cpp
test/: manager.cpp  monitor.cpp  slaver.cpp
